<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eReports</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="LogIn">Log In</string>
    <string name="company">ABC</string>
    <string name="btnAbout">About</string>
    <string name="btnReports">Reports</string>
    <string name="btnTests">Tests</string>
    <string name="btnContact">Contact</string>
    <string name="tag">eLabs</string>
    <string name="listLoadMore">Pull up to load more</string>
    <string name="menuLogOff">Log Off</string>
    <string name="menuExit">Exit</string>
    <string name="cacheWindowTitle">Cached Reports</string>
    <string name="aboutUsUS"><![CDATA[<html><head></head><body style="text-align:justify;color:black;background-color:white;"><p>American Bio-Clinical Laboratories, Inc. was first established in Los Angeles, California, USA in 1984. It was founded by a small group of dedicated scientists and business executives with unique expertise in clinical experience, technical skills, and sound business strategies. ABC Laboratories is a growing clinical laboratory serving the greater Los Angeles Metropolitan area for the past 30 years. It fulfills the requirements for the Clinical Laboratory Improvement Amendments (CLIA), participates in proficiency testing with the American Association of Bioanalysts (AAB) and College of American Pathologists (CAP), and is a member of the National Independent Laboratory Association (NILA).<br/><br/>To help accommodate growth and to ensure the highest possible level of quality service to our clients, ABC Laboratories employs only qualified staff. The true test of the strength and resiliency of any company is its people. ABC Laboratories is fortunate to have extremely loyal, hard working, and dedicated management personnel and staff. It is through the concerted effort and good team spirit of our staff that ABC Laboratories continues to thrive and prosper. We strongly believe that this extremely important facet of our organization will effectively serve all our clients for the present and in the future.<br/><br/>American Bio-Clinical Laboratories, Inc. is certified nationally and licensed by the California Department of Health Services.</p></body></html>]]></string>
	<string name="aboutUsJKT"><![CDATA[<html><head></head><body style="text-align:justify;color:black;background-color:white;"><p><b>Selamat Datang di Laboratorium ABC</b><br/><br/>Laboratorium Amerind Bio-Clinic atau Lab ABC adalah Laboratorium Klinik Utama  yang dikenal sebagai Pusat Rujukan Pemeriksaan Laboratorium di Indonesia.  Lab ABC telah memperoleh Akreditasi ISO 15189 dari Komite Akreditasi Nasional dan Akreditasi KALK (Komite Akreditasi Laboratorium Kesehatan) dari Departemen Kesehatan.<br/><br/>Lab ABC menyediakan berbagai jenis pemeriksaan laboratorium yang lengkap, meliputi pemeriksaan yang rutin hingga pemeriksaan specifik untuk hormon Replacement Therapy dan pemeriksaan  berteknologi tinggi seperti PCR / DNA. Didukung oleh manajemen yang profesional, peralatan yang mutakhir dan SDM yang kompeten dibidangnya, Laboratorium ABC hadir untuk memberikan pelayanan dengan kualitas terbaik dan terpercaya kepada pelanggan.<br/><br/>Lab ABC juga menawarkan berbagai fasilitas layanan yang memberikan kemudahan kepada pelanggan seperti: layanan Home Service, pelaporan hasil secara online / eReport, Pemesanan lab secara online /eRequest,  layanan pengambilan spesimen oleh kurir dan berbagai kemudahan lainnya.</p></body></html>]]></string>
	<string name="aboutUsMLA"><![CDATA[<html><head></head><body style="text-align:justify;color:black;background-color:white;"><p> American Bio-Clinical Laboratories, International was first established in 1999 at Madrigal Business Park, Ayala-Alabang, Muntinlupa City, Philippines. It was founded by a group of dedicated foreign and local medical practitioners and business executives with proven expertise in Clinical Laboratories, technical skills, and sound business strategies in USA and parts of Asia.<br/><br/> Over the years, it has grown progressively to develop into an integral part of the medical community in Metro Manila and surrounding provinces, and has provided excellent, high quality, dependable and professional services to the medical and diagnostic laboratory industry.<br/><br/>The year 2010 marks a major milestone of ABC Labs, Int&#39l. as we celebrated our 10th year Anniversary in the health industry. This milestone is capped by being the first Free- Standing Referral Laboratory in the country to be accredited for ISO 15189:2010 by the Philippine Accreditation Office of the Department of Trade and Industry (PAO-DTI).<br/><br/>ABC Labs, Int&#39l. to date, continues to live up to its goal to set the trend in the Referral Laboratory industry by providing up-to-date laboratory testing systems. The year 2011, was marked by the opening and operation of its Molecular Biology Department providing both Real-Time and Conventional methods of DNA testing (The first Free-Standing Laboratory in the country to provide such services).</p></body></html>]]></string>
	<string name="contactUsJKT"><![CDATA[<html><head></head><body style="text-align:justify;color:black;background-color:white;"><p><b>Kantor Pusat</b><br/>Graha Mas Blok C-18<br/>Jl. Raya Pejuangan, Kebon Jeruk<br/>Jakarta Barat 11530<br/>Tlp. 021 5301390, 021 5481608<br/>Fax. 021 5485523 (Lab), 021 5302107 (Marketing)<br/><br/><b>Cabang Jakarta Barat</b><br/>Kedoya Center Blok A-5<br/>Jl. Raya Pejuangan, Kebun Jeruk<br/>Jakarta Barat 11530<br/>Telp. 021 548 0491, 021 5493355<br/><br/><b>Cabang Bintaro</b><br/>Ruko Kebayoran Arcade 2 Blok B1-15<br/>Jl. Raya Boulevard<br/>Bintaro Jaya Sektor VII<br/>Tanggerang Selatan 15224<br/>Tlp. 021 29511780<br/>Fax, 021 29511781<br/><br/>Website :<br />www.abclab.co.id<br />Email :<br />info@abclab.co.id</p></body></html>]]></string>
	<string name="contactUsMLA"><![CDATA[<html><head></head><body style="text-align:justify;color:black;background-color:white;"><p><b>Main Laboratory</b><br/>LG 3-6 Richville Corporate Tower<br/>Madrigal Business Park<br/>Ayala-Alabang, Muntinlupa City<br/>Philippines<br/><br/><b>Telephone Nos.</b><br/>(632) 850-6288<br/>(632) 850-6289<br/><br/><b>Toll Free Nos.</b><br/>1-800-108073955<br/><br/><b>Fax Nos.</b><br/>(632) 850-6287<br/>(632) 807-9626<br/><br/>e-Mail: info@abclab.com.ph<br/>www.abclab.com.ph</p></body></html>]]></string>
	<string name="testDetailsBody"><![CDATA[<head><style type="text/css">p{white-space: pre-wrap;margin: 0;padding: 0;}.lbl{margin-bottom: 5px;margin-top: 10px;}.val{border-radius: 4px;moz-border-radius: 4px;webkit-border-radius: 4px;background-color:#E8E8E8;padding: 10px;}body{font-size: .9em;font-family: Verdana, Helvetica, Sans-Serif;margin: 5px auto;padding: 10px;color: #585858;}</style></head><body><div class="lbl">Code</div><div class="val">/*code*/</div><div class="lbl">Name</div><div class="val">/*name*/</div><div class="lbl">Description</div><div class="val"><p>/*description*/</p></div><div class="lbl">Specimen</div><div class="val">/*specimen*/</div><div class="lbl">Preparation</div><div class="val">/*preparation*/</div><div class="lbl">Running</div><div class="val">/*running*/</div><div class="lbl">TAT</div><div class="val">/*tat*/</div></body>]]></string>
	<string name="testDetailsBodyJKT"><![CDATA[<head><style type="text/css">p{white-space: pre-wrap;margin: 0;padding: 0;}.lbl{margin-bottom: 5px;margin-top: 10px;}.val{border-radius: 4px;moz-border-radius: 4px;webkit-border-radius: 4px;background-color:#E8E8E8;padding: 10px;}body{font-size: .9em;font-family: Verdana, Helvetica, Sans-Serif;margin: 5px auto;padding: 10px;color: #585858;}</style></head><body><div class="lbl">Kode Tes</div><div class="val">/*code*/</div><div class="lbl">Nama Tes</div><div class="val">/*name*/</div><div class="lbl">Penjelasan</div><div class="val"><p>/*description*/</p></div><div class="lbl">Spesimen</div><div class="val">/*specimen*/</div><div class="lbl">Persiapan</div><div class="val">/*preparation*/</div><div class="lbl">Hari Kerja</div><div class="val">/*running*/</div><div class="lbl">Hasil</div><div class="val">/*tat*/</div></body>]]></string>
	<string name="contactUsUS"><![CDATA[<html><head></head><body style="text-align:justify;color:black;background-color:white;"><p><b>Main Laboratory</b><br/>2730 North Main Street<br/>Los Angeles, CA 90031<br/><br/><b>Telephone Nos.</b><br/>(800) 738-4285<br/>(323) 222-6688<br/><br/><b>Fax Nos.</b><br/>(323) 222-3388<br/><br/>info@abclab.com<br/>www.abclab.com</p></body></html>]]></string>
	<string name="contactUsDefault"><![CDATA[<html><head></head><body style="text-align:justify;color:black;background-color:white;"><p><b>ABC Laboratories</b><br/>info@abclab.com</p></body></html>]]></string>
	<string name="findResultWindowTitle">Find Result</string>
	<string name="noRecordFound">No record found</string>
	<string name="noAddRecordFound">No more additional record found</string>
	<string name="noRecordFoundFilter">No record found on using specified filter</string>
	<string name="noRecordFoundCache">No record found on cache</string>
	<string name="menuLongPressOption">Long press item to show options</string>
	<string name="testWindowTitle">Available Test List</string>
	<string name="testNotFound">Cannot retrieve test data from the server</string>
</resources>
