<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin"
    tools:context="com.abclab.abcereports.UserLoginActivity" >

    <EditText
        android:id="@+id/usrLogInTxtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/usrLogInLogo"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/usrLogInTxtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/usrLogInTxtUsername"
        android:layout_alignEnd="@+id/usrLogInTxtUsername"
        android:layout_below="@+id/usrLogInTxtUsername"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/usrLogInBtnLogIn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/usrLogInTxtPassword"
        android:layout_alignEnd="@+id/usrLogInTxtPassword"
        android:layout_below="@+id/usrLogInTxtPassword"
        android:text="@string/LogIn" />

    <ImageView
        android:id="@+id/usrLogInLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_abc"
        android:contentDescription="@string/company" />
    
    <TextView
        android:id="@+id/usrLogIntTxtRefCtr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usrLogInBtnLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="" />
    
    <ImageButton
        android:id="@+id/usrLogInBtnReports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usrLogInBtnLogIn"
        android:layout_toStartOf="@+id/usrLogIntTxtRefCtr"
        android:contentDescription="@string/btnReports"
        android:src="@drawable/btn_main_reports" />

    <ImageButton
        android:id="@+id/usrLogInBtnTests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/usrLogInBtnReports"
        android:layout_below="@+id/usrLogInBtnLogIn"
        android:contentDescription="@string/btnTests"
        android:src="@drawable/btn_main_tests" />

    <ImageButton
        android:id="@+id/usrLogInBtnContactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/usrLogInBtnReports"
        android:layout_below="@+id/usrLogInBtnReports"
        android:contentDescription="@string/btnContact"
        android:src="@drawable/btn_main_contact" />

    <ImageButton
        android:id="@+id/usrLogInBtnAboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/usrLogInBtnTests"
        android:layout_below="@+id/usrLogInBtnTests"
        android:contentDescription="@string/btnAbout"
        android:src="@drawable/btn_main_about" />

</RelativeLayout>